Adhere frontend code to call and implement the backend highscores service Added frontend highscores page

--- a/game.html
+++ b/game.html
@@ -6,20 +6,18 @@
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
   </head>
   <body>
-    <!--
-    <p class="pre_text">If you are a member of the Toad CS 113 group, visit <b>/help</b> for gameplay docs
-    or visit our <a href="https://github.com/CS113/fatty-big-star">Github</a> 
-    for dev help and the style guide.</p>
-
-    <p class="pre_text">TODO: Our design doc will be uploaded to this website under 
-    /doc after we finish it!</p>
-    -->
     <br>
     <br>
+    <b><a href="/highscores.html">HIGHSCORES LIST</a></b>
+    <br>
+    <br>
+    <div id="username_input"></div>
 
     <!-- The game canvas is appended to the DOM, right here -->
-
     <script type="text/javascript" src="static/js/phaser.min.js"></script>
+
+    <!-- jQUery for client -> ajax -> server communication for highscores -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
     <!-- TODO: Minify our main.js -->
     <script type="text/javascript" src="static/js/main.js"></script>
