Prettify endgame UX score submission

--- a/game.html
+++ b/game.html
@@ -3,16 +3,19 @@
   <head> 
     <meta charset="UTF-8" />
     <title>Fatty Big Star</title>
+    <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
   </head>
   <body>
     <br>
+    <a href="/highscores.html" role="button"
+            class="btn btn-default" aria-label="Left Align">
+      <span class="glyphicon glyphicon glyphicon-signal" aria-hidden="true"></span>
+      &nbsp;Highscores
+    </a>
     <br>
-    <b><a href="/highscores.html">HIGHSCORES LIST</a></b>
     <br>
-    <br>
-    <div id="username_input"></div>
-
     <!-- The game canvas is appended to the DOM, right here -->
     <script type="text/javascript" src="static/js/phaser.min.js"></script>
 
