Huge post-game UI/UX overhaul

--- a/game.html
+++ b/game.html
@@ -22,6 +22,8 @@
     <!-- jQUery for client -> ajax -> server communication for highscores -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
+    <script src="static/js/jquery.cookie.js"></script>
+
     <!-- TODO: Minify our main.js -->
     <script type="text/javascript" src="static/js/main.js"></script>
   </body>
