Prettify highscores, fine tuned pre-game

--- a/game.html
+++ b/game.html
@@ -5,17 +5,19 @@
     <title>Fatty Big Star</title>
     <link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style_1.css">
   </head>
   <body>
     <br>
-    <a href="/highscores.html" role="button"
+    <div class="row header-row">
+      <a href="/highscores.html" role="button"
             class="btn btn-default" aria-label="Left Align">
-      <span class="glyphicon glyphicon glyphicon-signal" aria-hidden="true"></span>
-      &nbsp;Highscores
-    </a>
+        <span class="glyphicon glyphicon glyphicon-signal" aria-hidden="true"></span>
+        &nbsp;Highscores
+      </a>
+    </div>
     <br>
-    <br>
+
     <!-- The game canvas is appended to the DOM, right here -->
     <script type="text/javascript" src="static/js/phaser.min.js"></script>
 
@@ -25,6 +27,6 @@
     <script src="static/js/jquery.cookie.js"></script>
 
     <!-- TODO: Minify our main.js -->
-    <script type="text/javascript" src="static/js/main.js"></script>
+    <script type="text/javascript" src="static/js/main_1.js"></script>
   </body>
 </html>
