--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head> 
     <meta charset="UTF-8" />
     <title>Intro -- Fatty Big Star</title>
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style_1.css">
   </head>
   <body>
-    <video autoplay id="intro_video">
+    <div class="row header-row">
+      <video autoplay id="intro_video">
         <source src="static/videos/intro.mp4" type="video/mp4" />
-    </video>
+      </video>
+    </div>
 
     <script type="text/javascript">
       var video = document.getElementById('intro_video');
