--- a/index.html
+++ b/index.html
@@ -6,15 +6,40 @@
     <link rel="stylesheet" type="text/css" href="static/css/style_1.css">
   </head>
   <body>
-    <div class="row header-row">
+    <div class="row header-row" id="video-box">
+        <!--
       <video autoplay id="intro_video">
         <source src="static/videos/intro.mp4" type="video/mp4" />
       </video>
+      -->
     </div>
 
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+    <script src="static/js/jquery.cookie.js"></script> 
+
     <script type="text/javascript">
-      var video = document.getElementById('intro_video');
-      video.addEventListener('ended', function() {
+        var video_name = 'intro';
+        var video_type = 'ogg';
+        var v = document.createElement('video');
+
+        if (v.canPlayType &&
+                v.canPlayType('video/mp4').replace(/no/, '')) {
+            video_type = 'mp4';
+        }
+        
+        var extension = (video_type === 'mp4') ? '.mp4' : '.ogv';
+        var video_file = video_name + extension;
+
+        console.log('playing video file: ' + video_file);
+        $('#video-box').append(
+            '<video autoplay id="intro_video">' + 
+            '<source src="static/videos/' + video_file +
+                '" type="video/' + video_type + '" />' + 
+            '</video>'
+        );
+        var video_tag = document.getElementById('intro_video');
+        video_tag.addEventListener('ended', function() {
         window.location = '/game.html';
       });
     </script>
