--- a/game.html
+++ b/game.html
@@ -15,6 +15,11 @@
         <span class="glyphicon glyphicon glyphicon-signal" aria-hidden="true"></span>
         &nbsp;Highscores
       </a>
+      <a href="/docs/user_guide.pdf" role="button"
+          class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
+        &nbsp;User Guide
+      </a>
     </div>
     <br>
 
